# homework_camera

./: .gitignore  CMakeLists.txt  README.md  测试视频1.webm  测试视频2.webm
io/: camera.cpp  camera.hpp
src/: kalman.cpp  kalman.hpp  main.cpp
tasks/: detector.cpp
